// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TSX fixtures/generic-jsx-element.src 1`] = `
Object {
  "$id": 1,
  "block": Object {
    "range": Array [
      0,
      34,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 0,
      "block": Object {
        "range": Array [
          0,
          34,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 1,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 0,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 1,
  },
  "variables": Array [],
}
`;

exports[`TSX fixtures/generic-jsx-member-expression-private.src 1`] = `"Identifier expected."`;

exports[`TSX fixtures/generic-jsx-opening-element.src 1`] = `
Object {
  "$id": 1,
  "block": Object {
    "range": Array [
      0,
      46,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 0,
      "block": Object {
        "range": Array [
          0,
          46,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 1,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 0,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 1,
  },
  "variables": Array [],
}
`;

exports[`TSX fixtures/react-typed-props.src 1`] = `
Object {
  "$id": 7,
  "block": Object {
    "range": Array [
      0,
      164,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 6,
      "block": Object {
        "range": Array [
          0,
          164,
        ],
        "type": "Program",
      },
      "childScopes": Array [
        Object {
          "$id": 5,
          "block": Object {
            "range": Array [
              80,
              164,
            ],
            "type": "FunctionDeclaration",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [
            Object {
              "$id": 4,
              "from": Object {
                "$ref": 5,
              },
              "identifier": Object {
                "name": "props",
                "range": Array [
                  136,
                  141,
                ],
                "type": "Identifier",
              },
              "kind": "r",
              "resolved": Object {
                "$ref": 3,
              },
              "writeExpr": undefined,
            },
          ],
          "throughReferences": Array [],
          "type": "function",
          "upperScope": Object {
            "$ref": 6,
          },
          "variableMap": Object {
            "arguments": Object {
              "$ref": 2,
            },
            "props": Object {
              "$ref": 3,
            },
          },
          "variableScope": Object {
            "$ref": 5,
          },
          "variables": Array [
            Object {
              "$id": 2,
              "defs": Array [],
              "eslintUsed": undefined,
              "identifiers": Array [],
              "name": "arguments",
              "references": Array [],
              "scope": Object {
                "$ref": 5,
              },
            },
            Object {
              "$id": 3,
              "defs": Array [
                Object {
                  "name": Object {
                    "name": "props",
                    "range": Array [
                      93,
                      105,
                    ],
                    "type": "Identifier",
                  },
                  "node": Object {
                    "range": Array [
                      80,
                      164,
                    ],
                    "type": "FunctionDeclaration",
                  },
                  "parent": null,
                  "type": "Parameter",
                },
              ],
              "eslintUsed": undefined,
              "identifiers": Array [
                Object {
                  "name": "props",
                  "range": Array [
                    93,
                    105,
                  ],
                  "type": "Identifier",
                },
              ],
              "name": "props",
              "references": Array [
                Object {
                  "$ref": 4,
                },
              ],
              "scope": Object {
                "$ref": 5,
              },
            },
          ],
        },
      ],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 7,
      },
      "variableMap": Object {
        "App": Object {
          "$ref": 1,
        },
        "React": Object {
          "$ref": 0,
        },
      },
      "variableScope": Object {
        "$ref": 6,
      },
      "variables": Array [
        Object {
          "$id": 0,
          "defs": Array [
            Object {
              "name": Object {
                "name": "React",
                "range": Array [
                  12,
                  17,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  7,
                  17,
                ],
                "type": "ImportNamespaceSpecifier",
              },
              "parent": Object {
                "range": Array [
                  0,
                  30,
                ],
                "type": "ImportDeclaration",
              },
              "type": "ImportBinding",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "React",
              "range": Array [
                12,
                17,
              ],
              "type": "Identifier",
            },
          ],
          "name": "React",
          "references": Array [],
          "scope": Object {
            "$ref": 6,
          },
        },
        Object {
          "$id": 1,
          "defs": Array [
            Object {
              "name": Object {
                "name": "App",
                "range": Array [
                  89,
                  92,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  80,
                  164,
                ],
                "type": "FunctionDeclaration",
              },
              "parent": null,
              "type": "FunctionName",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "App",
              "range": Array [
                89,
                92,
              ],
              "type": "Identifier",
            },
          ],
          "name": "App",
          "references": Array [],
          "scope": Object {
            "$ref": 6,
          },
        },
      ],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 7,
  },
  "variables": Array [],
}
`;
